# ChatRoom

./: README.md  a.cpp  test.cpp
MSG_CLASS/: MSG.cpp  MSG.h
chatClient/: CMakeLists.txt
chatClient/header/: chatClient.h
chatClient/src/: chatClient.cpp  main.cpp
chatServer/: CMakeLists.txt
chatServer/header/: chatServer.h  threadPool.h
chatServer/src/: chatServer.cpp  main.cpp  threadPool.cpp
